split out networking and added Control Tower Assessment

--- a/account/env.example
+++ b/account/env.example
@@ -12,3 +12,7 @@ TF_VAR_iam_user_access_to_billing="DENY"
 
 # AWS Configuration
 TF_VAR_aws_profile="your-aws-profile"
+TF_VAR_aws_region="us-east-1"
+
+# Tags (optional)
+TF_VAR_tags='{"Environment": "production", "Owner": "your-team", "Project": "YOUR_PROJECT"}'
