--- a/.github/workflows/deploy-test-app.yml
+++ b/.github/workflows/deploy-test-app.yml
@@ -55,16 +55,30 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Install AWS CLI (if missing)
+      run: |
+        if ! command -v aws >/dev/null 2>&1; then
+          if command -v apt-get >/dev/null 2>&1; then
+            (sudo apt-get update || apt-get update)
+            (sudo apt-get install -y awscli || apt-get install -y awscli)
+          fi
+        fi
+        aws --version || true
+
+    - name: Load local AWS creds from secrets (act only)
+      if: ${{ env.ACT }}
+      run: |
+        if [ -n "${{ secrets.AWS_ACCESS_KEY_ID }}" ]; then echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV; fi
+        if [ -n "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]; then echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV; fi
+        if [ -n "${{ secrets.AWS_SESSION_TOKEN }}" ]; then echo "AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}" >> $GITHUB_ENV; fi
+        echo "AWS_REGION=${{ env.AWS_REGION }}" >> $GITHUB_ENV
+
     - name: Configure AWS credentials
+      if: ${{ !env.ACT }}
       uses: aws-actions/configure-aws-credentials@v4
       with:
         role-to-assume: ${{ github.ref == 'refs/heads/main' && secrets.AWS_ROLE_ARN_PROD || secrets.AWS_ROLE_ARN_DEV }}
         aws-region: ${{ env.AWS_REGION }}
-
-    - name: Create ECR repository if it doesn't exist
-      run: |
-        aws ecr describe-repositories --repository-names $ECR_REPOSITORY --region $AWS_REGION || \
-        aws ecr create-repository --repository-name $ECR_REPOSITORY --region $AWS_REGION
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -82,6 +96,20 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: '1.6.0'
+
+    - name: Ensure Terraform is executable (act only)
+      if: ${{ env.ACT }}
+      run: |
+        if [ -n "$TERRAFORM_CLI_PATH" ]; then
+          chmod +x "$TERRAFORM_CLI_PATH/terraform" || true
+          ln -sf "$TERRAFORM_CLI_PATH/terraform" /usr/local/bin/terraform || true
+          terraform version || true
+        fi
 
     - name: Deploy infrastructure
       run: |
